--- a/.github/actions/npm/jobs/build-and-test/action.yml
+++ b/.github/actions/npm/jobs/build-and-test/action.yml
@@ -22,6 +22,10 @@ inputs:
     description: "Skip performance tests during CI"
     required: false
     default: "false"
+  test-environment:
+    description: "Environment for tests (affects NODE_ENV and NODE_OPTIONS --conditions flag)"
+    required: false
+    default: "development"
 
 runs:
   using: composite
@@ -62,7 +66,7 @@ runs:
       uses: CLDMV/.github/.github/actions/common/steps/run-tests@v1
       with:
         test-command: ${{ inputs.test-command }}
-        environment: development
+        environment: ${{ inputs.test-environment }}
 
     - name: Update Summary - Tests
       shell: bash
