--- a/examples/individual-repo-workflows/publish.yml
+++ b/examples/individual-repo-workflows/publish.yml
@@ -27,6 +27,11 @@ on:
         type: string
         required: false
         default: "npm"
+      test_environment:
+        description: "Environment for tests (affects NODE_ENV and NODE_OPTIONS --conditions flag)"
+        type: string
+        required: false
+        default: "development"
       version:
         description: "Version to publish (auto-detected from package.json if not provided)"
         type: string
@@ -75,7 +80,11 @@ jobs:
       github_packages_publish_command: ""
       min_node_version: ${{ github.event.inputs.min_node_version || '20' }}
       max_node_major: ${{ github.event.inputs.max_node_major || '22' }}
-      test_command: "npm test"
+      test_command: "npm test" # Use defaults: NODE_ENV=development, NODE_OPTIONS=--conditions=development
+      # test_command: "NODE_OPTIONS='--conditions=slothlet-dev' npm test"  # Override NODE_OPTIONS only
+      # test_command: "NODE_ENV=test npm test"  # Override NODE_ENV only
+      # test_command: "NODE_ENV=test NODE_OPTIONS='--conditions=slothlet-dev' npm test"  # Override both
+      test_environment: ${{ github.event.inputs.test_environment || 'development' }} # Alternative to setting in test_command
       build_command: "npm run build:ci"
       is_prerelease: false
       release_source_only: false
