feat: add test_environment parameter to release and publish workflows
- Added test_environment parameter to workflow-release.yml inputs and build-and-test call

- Added test_environment parameter to workflow-publish.yml inputs and build-and-test call

- Completes test_environment parameter bubbling through all workflow chains

- Release and publish workflows now support custom NODE_OPTIONS conditions like slothlet-dev

--- a/.github/workflows/workflow-publish.yml
+++ b/.github/workflows/workflow-publish.yml
@@ -101,6 +101,11 @@ on:
         type: boolean
         default: false
         description: "Skip matrix testing (use single node version only)"
+      test_environment:
+        required: false
+        type: string
+        default: "development"
+        description: "Environment for tests (affects NODE_ENV and NODE_OPTIONS --conditions flag)"
       # Bot signing parameters
       use_gpg:
         required: false
@@ -202,6 +207,7 @@ jobs:
       build_command: ${{ inputs.build_command }}
       skip_performance_tests: ${{ inputs.skip_performance_tests }}
       skip_matrix_tests: ${{ inputs.skip_matrix_tests }}
+      test_environment: ${{ inputs.test_environment }}
 
   publish:
     name: "📦 Publish Package"
