--- a/.github/workflows/workflow-release.yml
+++ b/.github/workflows/workflow-release.yml
@@ -85,6 +85,11 @@ on:
                 type: boolean
                 default: false
                 description: "Skip matrix testing (use single node version only)"
+            test_environment:
+                required: false
+                type: string
+                default: "development"
+                description: "Environment for tests (affects NODE_ENV and NODE_OPTIONS --conditions flag)"
             # Bot signing parameters
             use_gpg:
                 required: false
@@ -256,6 +261,7 @@ jobs:
             build_command: ${{ inputs.build_command }}
             skip_performance_tests: ${{ inputs.skip_performance_tests }}
             skip_matrix_tests: ${{ inputs.skip_matrix_tests }}
+            test_environment: ${{ inputs.test_environment }}
 
     release:
         name: "🚀 Release Management"
