feat: make NPM token optional for trusted publisher support
Adds support for NPM trusted publishers by making the NPM_TOKEN secret optional. When no token is provided, the workflow will use trusted publisher authentication instead of traditional token-based authentication. This eliminates the need to rotate tokens every 90 days.

Changes:

- workflow-publish.yml: Made NPM_TOKEN secret optional

- publish-npm/action.yml: Made npm-token input optional

- publish-package/action.yml: Made auth-token input optional and conditionally set NODE_AUTH_TOKEN only when a token is provided

References: https://docs.npmjs.com/trusted-publishers

--- a/.github/actions/npm/jobs/publish-npm/action.yml
+++ b/.github/actions/npm/jobs/publish-npm/action.yml
@@ -24,8 +24,8 @@ inputs:
     required: false
     default: "false"
   npm-token:
-    description: "NPM token for authentication"
-    required: true
+    description: "NPM token for authentication (optional when using trusted publishers)"
+    required: false
   artifact-name:
     description: "Name of the build artifact to download"
     required: false
