--- a/examples/individual-repo-workflows/release.yml
+++ b/examples/individual-repo-workflows/release.yml
@@ -1,9 +1,28 @@
 # Individual repo: .github/workflows/release.yml
 #
-# This workflow intelligently detects release commits in the commit history
-# and creates release PRs. It runs on human commits to branches (except main/master)
-# and uses smart commit analysis to determine if a release should be created.
-# Bot commits are ignored to prevent infinite loops.
+# This workflow intelligently detects commits that warrant a release and creates
+# release PRs automatically. It supports two modes:
+#
+# AUTOMATIC MODE (Recommended):
+# - Detects conventional commits automatically: feat:, fix:, perf:, revert:, breaking changes
+# - Calculates version bump based on commit types:
+#   * Major (breaking): feat!:, fix!:, perf!:, or any commit with ! suffix
+#   * Minor (feature): feat:, feat(scope):
+#   * Patch (fixes/improvements): fix:, perf:, revert:, with optional scopes like fix(docs):
+# - Creates or updates release PRs with appropriate version bumps
+# - Supports scopes/subtypes: feat(api):, fix(docs):, perf(cache):, etc.
+# - Version bump is calculated from the base version and uses the HIGHEST bump detected
+#   (e.g., if there's a fix: and feat:, uses minor bump; additional commits don't increase further)
+# - Maintenance commits (chore:, docs:, ci:, style:, test:, refactor:) do NOT trigger releases
+#   but are still included in changelogs when a release is triggered
+#
+# MANUAL MODE (Explicit Control):
+# - Use `release:` prefix to explicitly trigger a release
+# - Use `release!:` prefix to force a breaking change/major version bump
+# - Optionally specify exact version: `release: v1.2.3` or `release: bump to 1.2.3`
+#
+# The workflow runs on human commits to branches (except main/master) and uses
+# smart commit analysis. Bot commits are ignored to prevent infinite loops.
 #
 name: 🚀 Create Release PR
 
